update page 25 de sept

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -197,9 +197,9 @@ es:
         others: Contactos
     attributes:
       contact:
-        title: Título
         name: Nombre
-        content: Descripción
+        email: Correo Electrónico
+        message: Mensaje
   contacts:
     new:
       title: "Nuevo Contacto"
